e2e-tests/tests/snapshots/postgres__srid_3857_tilejson.snap
---
source: e2e-tests/tests/postgres.rs
expression: srid_3857
---
{
  "bounds": [
    -161.4059077755,
    -81.5072702161,
    172.5154912677,
    84.2440187164
  ],
  "description": "public.points3857.geom",
  "name": "points3857",
  "tilejson": "3.0.0",
  "tiles": [
    "http://[ADDR]/points3857/{z}/{x}/{y}"
  ],
  "vector_layers": [
    {
      "fields": {
        "gid": "int4"
      },
      "id": "points3857"
    }
  ]
}
