e2e-tests/tests/snapshots/postgres__table_and_view_two_schemas_dot_1_tilejson.snap
---
source: e2e-tests/tests/postgres.rs
expression: source_tilejson
---
{
  "bounds": [
    0.0012741833,
    0.0000988181,
    0.0012921496,
    0.0001169055
  ],
  "description": "schema_b.table_and_view_two_schemas.b_geom",
  "name": "table_and_view_two_schemas.1",
  "tilejson": "3.0.0",
  "tiles": [
    "http://[ADDR]/table_and_view_two_schemas.1/{z}/{x}/{y}"
  ],
  "vector_layers": [
    {
      "fields": {
        "b_id": "int4",
        "b_info": "text"
      },
      "id": "table_and_view_two_schemas.1"
    }
  ]
}
