e2e-tests/tests/snapshots/postgres__table_comment_tilejson.snap
---
source: e2e-tests/tests/postgres.rs
expression: table_comment
---
{
  "bounds": [
    -170.94984639,
    -84.2002558073,
    167.7089285828,
    74.2357328475
  ],
  "description": "a description from comment on table",
  "name": "MixPoints",
  "tilejson": "3.0.0",
  "tiles": [
    "http://[ADDR]/MixPoints/{z}/{x}/{y}"
  ],
  "vector_layers": [
    {
      "fields": {
        "Gid": "int4",
        "TABLE": "text"
      },
      "id": "MixPoints"
    }
  ]
}
