e2e-tests/tests/snapshots/postgres__table_name_existing_two_schemas_0_0_0.snap
---
source: e2e-tests/tests/postgres.rs
expression: dump
---
layer: 0
  name: table_name_existing_two_schemas
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(3673,1911)
    properties:
      a_id = 2 (uint)
      a_name = "point_2"
  feature: 1
    id: (none)
    geometry: POINT(3673,1911)
    properties:
      a_id = 1 (uint)
      a_name = "point_1"
