e2e-tests/tests/snapshots/postgres__table_name_existing_two_schemas_dot_1_tilejson.snap
---
source: e2e-tests/tests/postgres.rs
expression: source_tilejson
---
{
  "bounds": [
    10.0,
    10.0,
    40.0,
    40.0
  ],
  "description": "schema_b.table_name_existing_two_schemas.b_geom",
  "name": "table_name_existing_two_schemas.1",
  "tilejson": "3.0.0",
  "tiles": [
    "http://[ADDR]/table_name_existing_two_schemas.1/{z}/{x}/{y}"
  ],
  "vector_layers": [
    {
      "fields": {
        "b_id": "int4",
        "b_info": "text"
      },
      "id": "table_name_existing_two_schemas.1"
    }
  ]
}
