e2e-tests/tests/snapshots/postgres__table_name_existing_two_schemas_tilejson.snap
---
source: e2e-tests/tests/postgres.rs
expression: source_tilejson
---
{
  "bounds": [
    142.8409440943,
    11.926741846,
    142.8414336,
    11.9273703486
  ],
  "description": "schema_a.table_name_existing_two_schemas.a_geom",
  "name": "table_name_existing_two_schemas",
  "tilejson": "3.0.0",
  "tiles": [
    "http://[ADDR]/table_name_existing_two_schemas/{z}/{x}/{y}"
  ],
  "vector_layers": [
    {
      "fields": {
        "a_id": "int4",
        "a_name": "text"
      },
      "id": "table_name_existing_two_schemas"
    }
  ]
}
